tests/ui/parser/misspelled-keywords/static.stderr
error: keyword `static` is written in the wrong case
  --> $DIR/static.rs:1:1
   |
LL | Static a: u32 = 0;
   | ^^^^^^
   |
help: write it in lowercase (notice the capitalization)
   |
LL - Static a: u32 = 0;
LL + static a: u32 = 0;
   |

error: aborting due to 1 previous error

