tests/ui/parser/misspelled-keywords/static.rs
Static a: u32 = 0;
//~^ ERROR keyword `static` is written in the wrong case
fn main() {}
